/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
export type Role = {
    id?: number;
    name?: string;
    description?: string;
};

