/* generated using openapi-typescript-codegen -- do not edit */
/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */
import type { Organization } from './Organization';
import type { Role } from './Role';
import type { User } from './User';
export type UserOrganizationRole = {
    id?: number;
    user?: User;
    organization?: Organization;
    role?: Role;
};

