@startuml
!theme plain
hide circle
skinparam linetype ortho

package "Auth Service" {
    class User {
        UUID id
        String email
        String passwordHash
        String fullName
        String phone
        UserStatus status
    }

    class Organization {
        UUID id
        String name
        String description
        String contactEmail
        OrganizationStatus status
        User owner
        String cancellationPolicy
        String refundPolicy
        String supportedPaymentMethods
        String feesAndTaxes
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }
    
    class Role {
        Long id
        String name
        String description
    }

    class Permission {
        Long id
        String name
        String description
    }

    class UserOrganizationRole {
        Long id
        User user
        Organization organization
        Role role
    }

    enum UserStatus {
        ACTIVE
        SUSPENDED
        PENDING
    }

    enum OrganizationStatus {
        ACTIVE
        SUSPENDED
    }
    
    User "1" -- "0..*" UserOrganizationRole
    Role "1" -- "0..*" UserOrganizationRole
    Organization "1" -- "0..*" UserOrganizationRole
    Role "1" -- "0..*" Permission : has >
    User "1" -- "0..*" Organization : is owner of >
}

package "Event Service" {
    class Event {
        Long id
        UUID organizerId
        String name
        String description
        String category
        LocalDateTime startTime
        LocalDateTime endTime
        Venue venue
        String coverImage
        EventStatus status
        Boolean allowTicketTransfer
        Boolean allowAttendeeNameChange
        Boolean refundEnabled
        Integer refundDeadlineHours
        Double refundFeePercent
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class Venue {
        Long id
        String name
        String address
        String city
        Integer capacity
        String mapImage
    }

    class TicketType {
        Long id
        String name
        BigDecimal price
        Integer quota
        Integer purchaseLimit
        LocalDateTime startSale
        LocalDateTime endSale
    }

    class Seat {
        Long id
        String section
        String rowLabel
        String seatNumber
        String seatCategory
        Boolean isAvailable
        Boolean locked
    }

    class Discount {
        Long id
        String code
        Integer discountPercent
        BigDecimal discountAmount
        BigDecimal minimumOrderAmount
        Integer usageLimit
        Integer usedCount
        LocalDateTime validFrom
        LocalDateTime validTo
    }

    enum EventStatus {
        DRAFT
        PENDING_APPROVAL
        PUBLISHED
        CANCELLED
    }
    
    Event "1" *-- "0..*" TicketType
    Event "1" *-- "0..*" Seat
    Event "1" *-- "0..*" Discount
    Event "0..*" -- "1" Venue : has >
}

package "Order Service" {
    class Order {
        Long id
        UUID userId
        Long eventId
        BigDecimal totalAmount
        String currency
        String discountCode
        String paymentMethod
        OrderStatus status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class OrderItem {
        Long id
        Order order
        Long ticketTypeId
        BigDecimal price
    }

    class Ticket {
        Long id
        OrderItem orderItem
        Long seatId
        String ticketCode
        String attendeeName
        String attendeeEmail
        TicketStatus status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class PaymentInfo {
        Long id
        Order order
        String method
        String transactionId
        BigDecimal amount
        PaymentInfoStatus status
        LocalDateTime paidAt
    }

    class Reservation {
        Long id
        UUID userId
        Long eventId
        Long ticketTypeId
        Long seatId
        Integer quantity
        LocalDateTime expireAt
        ReservationStatus status
    }

    enum ReservationStatus {
        PENDING
        CONFIRMED
        EXPIRED
        CANCELLED
    }

    Order "1" *-- "1..*" OrderItem
    Order "1" -- "0..1" PaymentInfo
    Reservation "1" -- "1" Order : becomes
}

package "Ticket Service" {
    class Ticket {
        Long id
        Long orderId
        Long eventId
        String userId
        Long seatId
        String ticketCode
        String attendeeName
        String attendeeEmail
        TicketStatus status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class TicketTransfer {
        UUID id
        Ticket ticket
        String senderId
        String recipientEmail
        TransferStatus status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    class CheckInLog {
        Long id
        Ticket ticket
        Long eventId
        String userId
        LocalDateTime checkInTime
        String gate
        String deviceId
    }

    enum TicketStatus {
        ISSUED
        SCANNED
        TRANSFERRED
        REFUNDED
    }

    enum TransferStatus {
        PENDING
        APPROVED
        REJECTED
        CANCELLED
    }

    Ticket "1" -- "0..*" TicketTransfer : history >
    Ticket "1" -- "0..1" CheckInLog : generates >
}

package "Notification Service" {
    class Notification {
        Long id
        String recipient
        String subject
        String content
        String type
        LocalDateTime sentAt
    }
}

package "Payment Service" {
    class PaymentTransaction {
        Long id
        Long orderId
        String paymentMethod
        String transactionId
        BigDecimal amount
        PaymentTransactionStatus status
        LocalDateTime createdAt
        LocalDateTime updatedAt
    }

    enum PaymentTransactionStatus {
        PENDING
        SUCCESS
        FAILED
        REFUNDED
    }
}

' Inter-service Relationships
AuthService.User "1" -- "0..*" OrderService.Order : places
AuthService.Organization "1" -- "0..*" EventService.Event : organizes
EventService.Event "1" -- "0..*" OrderService.Order : has
EventService.TicketType "1" -- "0..*" OrderService.OrderItem : defines
OrderService.Order "1" -- "1" PaymentService.PaymentTransaction : processed via
OrderService.PaymentInfo "1" .. "0..1" PaymentService.PaymentTransaction : references >
OrderService.Order "1" -- "0..*" TicketService.Ticket : generates >

@enduml
